--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                     <h2 class="mbr-section-title h1">Information mit meine Referencen als PDF herunterladen</h2>
                     
                 </div>                
-                <div class="col-sm-4 text-xs-right"><a class="btn btn-lg btn-danger" href="https://mobirise.com">Download</a></div>
+                <div class="col-sm-4 text-xs-right"><a class="btn btn-lg btn-danger" href="https://github.com/agataklim/agata/raw/master/musikundpolnischDE.pdf">Download</a></div>
             </div>
         </div>
     </div>
