create github pages

--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
             <div>
 
                 <div class="col-sm-8">
-                    <h2 class="mbr-section-title h1">Information mit meine Referenzen als PDF herunterladen</h2>
+                    <h2 class="mbr-section-title h1">Information mit meinem Referenzen als PDF herunterladen</h2>
                     
                 </div>                
                 <div class="col-sm-4 text-xs-right"><a class="btn btn-lg btn-danger" href="https://github.com/agataklim/agata/raw/master/musikundpolnischDE.pdf">Download</a></div>
