--- a/index.html
+++ b/index.html
@@ -233,10 +233,16 @@
     </div>
 </section>
  <section class="mbr-section mbr-section-small" id="msg-box1-l" data-rv-view="1116" style="background-color: rgb(255, 248, 224); padding-top: 3rem; padding-bottom: 1.5rem;">
-    
+ <div class="container">
+        <div class="row">
+            
+            <div>
+
+                <div class="col-sm-8">    
 
      <script  src="https://players.yumpu.com/hub.js"> </script><div id="yumpuMagazineContainer" style="width:620px; height:368px;"> </div>
-</section> 
+</div>  
+                  </section> 
  
 
   
