--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
 
                 <div class="col-sm-8">    
 
-     <script  src="https://players.yumpu.com/hub.js"> </script><div id="yumpuMagazineContainer" style="width:620px; height:368px;"> </div>
+     <iframe width="620px" height="368px" src="https://www.yumpu.com/de/embed/view/dDtNoqA9QW2jsE68" frameborder="0" allowfullscreen="true"  allowtransparency="true"></iframe>
 </div>  
                   </section> 
  
