--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                   </section> 
  </section>
 
-<section class="mbr-section mbr-section-small" id="msg-box1-l" data-rv-view="1116" style="background-color: rgb(255, 248, 224); padding-top: 3rem; padding-bottom: 1.5rem;">
+<section class="mbr-section mbr-section-small" id="msg-box1-l" data-rv-view="1116" style="background-color:#FFFFFF; padding-top: 1rem; padding-bottom: 1.5rem;">
     
 
     <div class="container">
