--- a/index.html
+++ b/index.html
@@ -222,11 +222,10 @@
 
                 <div class="col-sm-8">    
 
-<style>.embed-container { position: relative; padding-bottom:56.25%; height:0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%;}</style><div class='embed-container' data-page-width='500' data-page-height='293' id='ypembedcontainer' ><iframe   src="https://www.yumpu.com/de/embed/view/JBDqK3Y5dH9Sm6jQ" frameborder="0" allowfullscreen="true"  allowtransparency="true"></iframe></div><script src='https://players.yumpu.com/modules/embed/yp_r_iframe.js' ></script></div>  
-                  </section> 
+     <iframe width="620px" height="368px" src="https://www.yumpu.com/de/embed/view/dDtNoqA9QW2jsE68" frameborder="0" allowfullscreen="true"  allowtransparency="true"></iframe>                   </section> 
  </section>
 
-<section class="mbr-section mbr-section-small" id="msg-box1-l" data-rv-view="1116" style="background-color: rgb(255, 248, 224); padding-top: 3rem; padding-bottom: 1.5rem;">
+<section class="mbr-section mbr-section-small" id="msg-box1-l" data-rv-view="1116" style="background-color: rgb(255, 248, 224); padding-top: 2rem; padding-bottom: 1.5rem;">
 	    
 
     <div class="container">
